--- a/index.html
+++ b/index.html
@@ -33,7 +33,33 @@
 		</div>
 		<div class="aboutme">
 			<h1>About Me</h1>
-			<h2>I'm a 14 year old Skript developer that is looking to make <u>Your</u> server better and more approachable.<br>Using Skript, I aim to explore the limits of Minecraft servers.</h2>
+			<h2>I'm a 14 year old Skript developer that is looking to make <u>Your</u> server better and more approachable.<br>Using Skript, I aim to explore the limits of Minecraft servers.<br>You can also contact me with discord. (Copy in top-left corner)</h2>
+		</div>
+		<div class="languages">
+			<h8>Languages</h8>
+			<div class="languages-container">
+				<div class="language">
+					<img src="images/skript.png" alt="">
+					<h1>Skript</h1>
+					<h2>Skript is the language I'm most familiar with, I have been using it for around 2.5 years. It is a scripting language to make creating Minecraft server modifications easier.</h2>
+				</div>
+				<div class="language">
+					<img src="images/python.png" alt="" style="left:5px;top:-15px;">
+					<h1>Python</h1>
+					<h2>I use python for calculations and some small projects.</h2>
+				</div>
+				<div class="language">
+					<img src="images/java.png" alt="" style="left:5px;top:-15px;">
+					<h1>Java</h1>
+					<h2>I rarely make Minecraft plugins using Java. I really don't like using it.</h2>
+				</div>
+				<div class="language">
+					<img src="images/web.png" alt="" style="left:5px;top:-25px;width:250px;height:170px;">
+					<h1 style="font-size: 20px;top:20px">HTML, CSS, and JavaScript</h1>
+					<h2 style="top: 30px">I use these languages to create websites like the one you're on right now.</h2>
+				</div>
+			</div>
+			
 		</div>
 		<div class="credit">
 			<h4>Website made by, well, Me.</h4>
