fixed issues with smaller screens

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<h2>I rarely make Minecraft plugins using Java. I really don't like using it.</h2>
 				</div>
 				<div class="language">
-					<img src="images/web.png" alt="" style="left:5px;top:-25px;width:250px;height:170px;">
+					<img src="images/web.png" alt="" style="left:5px;top:-25px;width:12vw;height:8vw;">
 					<h1 style="font-size: 20px;top:20px">HTML, CSS, and JavaScript</h1>
 					<h2 style="top: 30px">I use these languages to create websites like the one you're on right now.</h2>
 				</div>
